<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="500dp"
        android:paddingBottom="@dimen/padding_double"
        >

        <TextView
            android:id="@+id/account_type_title"
            style="@style/TextStyleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_standard"
            android:gravity="center"
            android:text="@string/text_select_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_primary_text"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/operation_type"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/account_title"
            style="@style/TextStyleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/none"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_type_title"
            tools:text="Account name"
            />

        <TextView
            android:id="@+id/amount"
            style="@style/TextStyleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_standard"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_title"
            tools:text="$ 2312.21"
            />

        <EditText
            android:id="@+id/amount_edit"
            style="@style/TextStyleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/hint_enter_amount"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount"
            />

        <EditText
            android:id="@+id/title_edit"
            style="@style/TextStyleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="37dp"
            android:ems="10"
            android:hint="@string/hint_enter_title"
            android:inputType="textAutoCorrect|text|textCapSentences|textAutoComplete"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_edit"
            />

        <TextView
            android:id="@+id/operation_type_title"
            style="@style/TextStyleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/margin_standard"
            android:text="@string/text_operation_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_edit"
            />

        <TextView
            android:id="@+id/operation_type"
            style="@style/TextStyleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/operation_type_title"
            app:layout_constraintWidth_percent=".8"
            tools:text="@string/none"
            />

        <TextView
            android:id="@+id/category_title"
            style="@style/TextStyleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/margin_standard"
            android:text="@string/text_add_category_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/operation_type"
            />

        <TextView
            android:id="@+id/category_label"
            style="@style/TextStyleDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:text="@string/none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_title"
            app:layout_constraintWidth_percent=".8"
            />

        <TextView
            android:id="@+id/add"
            style="@style/TextStyleDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/accept"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/periodic_edit"
            />

        <TextView
            android:id="@+id/cancel"
            style="@style/TextStyleDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/decline"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/add"
            app:layout_constraintEnd_toStartOf="@+id/add"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_label"
            app:layout_constraintTop_toTopOf="@+id/add"
            />

        <Switch
            android:id="@+id/periodic_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingEnd="20dp"
            android:text="@string/is_periodic_operation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_label"
            />

        <TextView
            android:id="@+id/textView"
            style="@style/TextStyleDark"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="-1dp"
            android:gravity="center"
            android:text="@string/period_title"
            app:layout_constraintBottom_toBottomOf="@+id/periodic_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/periodic_edit"
            />

        <EditText
            android:id="@+id/periodic_edit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/periodic_switch"
            />

        <android.support.constraint.Group
            android:id="@+id/periodic_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="textView,periodic_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"
            />

    </android.support.constraint.ConstraintLayout>

</ScrollView>

