...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/operation_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-1dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingTop="@dimen/detail_top_padding"
...
        app:layout_constraintStart_toStartOf="@+id/operation_recycler"
        app:layout_constraintTop_toTopOf="@+id/operation_recycler"
        />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_standard"
        app:elevation="@dimen/fab_elevation_standard"
        app:fabSize="normal"
...
