...
    <string name="text_add_category_label"><u>Select category</u></string>
    <string name="none">None</string>
    <string name="dialog_title_rub">Russian Ruble (RUB)</string>
    <string name="dialog_title_usd">United States Dollar (USD)</string>
    <string name="new_operation_title">New Operation</string>
    <string name="empty_title">Please enter title!</string>
    <string name="err_empty_field">You should enter amount first</string>
    <string name="error_create_operation">Something went wrong! The Operation was not added</string>
    <string name="operation_success">Operation added!</string>
    <string name="zero_amount">Amount can\'t be zero!</string>
    <string name="is_periodic_operation">Periodic transaction</string>
    <string name="period_title">Repeat through (days)</string>
    <string name="repeat_count_zero">Repeat can\'t be zero!</string>
    <string name="repeat_count_empty">Repeat can\'t be empty!</string>


...
